k8s/Zuul/zuul-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: zuul
  name: zuul
spec:
  type: NodePort
  selector:
    component: zuul
    run: zuul
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
